--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#B3E5FC"
-    tools:context=".ui.login.LogInActivity">
+    tools:context=".ui.loginModel.LogInActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -23,13 +23,13 @@
             android:layout_marginBottom="100dp">
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/iv_login_banner"
                 android:layout_width="match_parent"
                 android:layout_height="133dp"
                 app:srcCompat="@drawable/login_banner" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tv_login_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -58,7 +58,8 @@
                 android:ems="10"
                 android:hint="Mobile"
                 android:inputType="textPersonName"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:text="9876543210" />
         </android.support.v7.widget.CardView>
 
 
@@ -76,7 +77,8 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Password"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:text="12345678" />
         </android.support.v7.widget.CardView>
 
 
@@ -101,7 +103,8 @@
                     android:background="#0288D1"
                     android:text="Login"
                     android:textColor="#FFFF"
-                    android:textSize="15dp" />
+                    android:textSize="15dp"
+                    android:onClick="onViewClicked"/>
             </android.support.v7.widget.CardView>
 
 
@@ -119,20 +122,22 @@
                     android:background="#0288D1"
                     android:text="Register"
                     android:textColor="#FFFF"
-                    android:textSize="15dp" />
+                    android:textSize="15dp"
+                    android:onClick="onViewClicked"/>
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tv_forgot_pw"
             android:layout_width="match_parent"
             android:layout_height="142dp"
             android:gravity="center"
             android:padding="15dp"
             android:text="Forgot Password?"
             android:textColor="#212121"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:onClick="onViewClicked"/>
 
 
     </LinearLayout>
