--- a/app/src/main/res/layout/activity_search_old.xml
+++ b/app/src/main/res/layout/activity_search_old.xml
@@ -13,23 +13,24 @@
         android:background="@color/colorPrimary_light">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="421dp"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark"
-            android:layout_marginBottom="50dp">
+            android:layout_marginBottom="50dp"
+            android:background="@color/colorPrimaryDark">
+
             <TextView
                 android:layout_width="252dp"
                 android:layout_height="match_parent"
                 android:text="Search"
-                android:textSize="75dp"
-                android:textColor="@color/colorIcons"/>
+                android:textColor="@color/colorIcons"
+                android:textSize="75dp" />
 
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="139dp"
                 android:layout_height="135dp"
-                app:srcCompat="@drawable/search_icon"
-                android:layout_gravity="right"/>
+                android:layout_gravity="right"
+                app:srcCompat="@drawable/search_icon" />
 
         </LinearLayout>
 
