--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -12,8 +12,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/colorPrimary_light">
+        android:background="@color/colorPrimary_light"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,7 +51,8 @@
                 android:ems="10"
                 android:hint="Departing City"
                 android:inputType="textPersonName"
-                android:padding="10dp"/>
+                android:padding="10dp"
+                android:text="St. Charles, IL" />
 
         </android.support.v7.widget.CardView>
 
@@ -69,38 +70,35 @@
                 android:ems="10"
                 android:hint="Arriving City"
                 android:inputType="textPersonName"
-                android:padding="10dp"/>
+                android:padding="10dp"
+                android:text="New York City, NY" />
         </android.support.v7.widget.CardView>
-
 
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#212121"
-                android:textColor="#FFF"
-                android:text="Date: "
-                android:textSize="30dp"
                 android:padding="10dp"
-                />
+                android:text="Date: "
+                android:textColor="#FFF"
+                android:textSize="30dp" />
 
             <TextView
                 android:layout_width="317dp"
                 android:layout_height="wrap_content"
+                android:background="#212121"
                 android:hint="Select Date"
                 android:padding="10dp"
-                android:textSize="30dp"
+                android:textColor="#FFF"
                 android:textColorHint="#BDBDBD"
-                android:background="#212121"
-                android:textColor="#FFF"/>
-
-
+                android:textSize="30dp" />
         </LinearLayout>
-
 
         <com.github.sundeepk.compactcalendarview.CompactCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/compactcalendar_view"
