--- a/app/src/main/res/layout/item_seat.xml
+++ b/app/src/main/res/layout/item_seat.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_Seat"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary_light">
+    android:background="@color/colorPrimary_light"
+    android:layout_marginLeft="0dp"
+    android:layout_marginRight="0dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv_set"
-        android:layout_width="27dp"
-        android:layout_height="29dp">
+        android:layout_width="57dp"
+        android:layout_height="64dp"
+        >
 
         <ImageView
             android:id="@+id/iv_seat"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#FFF"
+            android:background="#be1818"
             app:srcCompat="@drawable/icon_seat" />
 
         <TextView
@@ -29,7 +32,7 @@
             android:text=""
             android:textColor="#212121"
             android:textColorHint="#212121"
-            android:textSize="10dp"
+            android:textSize="20dp"
             android:textStyle="bold" />
     </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
