--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#B3E5FC"
-    tools:context=".ui.loginModel.LogInActivity">
+    tools:context=".ui.login.LogInActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -138,8 +138,17 @@
             android:textColor="#212121"
             android:textSize="20dp"
             android:onClick="onViewClicked"/>
-
-
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/fpwframefrag"
+        android:layout_width="0dp"
+        android:layout_height="353dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
