--- a/app/src/main/res/layout/activity_seat.xml
+++ b/app/src/main/res/layout/activity_seat.xml
@@ -16,14 +16,13 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_seats"
             android:layout_width="match_parent"
-            android:layout_height="517dp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp"
+            android:layout_height="514dp"
             android:layout_marginLeft="25dp"
+            android:layout_marginTop="5dp"
             android:layout_marginRight="25dp"
-            android:layout_marginTop="10dp"
             android:background="@color/colorPrimary"
-            >
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="8dp">
 
         </android.support.v7.widget.RecyclerView>
 
@@ -39,15 +38,16 @@
                 android:layout_weight="1"
                 android:gravity="left"
                 android:padding="15dp"
-                android:text="Seats: "
-                android:textSize="20dp"
+                android:text=""
+                android:textSize="15dp"
                 android:textStyle="bold" />
 
             <android.support.v7.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="15dp">
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp">
 
                 <Button
                     android:id="@+id/btn_seat"
@@ -57,7 +57,8 @@
                     android:background="@color/colorPrimaryDark"
                     android:gravity="center"
                     android:onClick="onViewClicked"
-                    android:text="Continue"
+                    android:padding="10dp"
+                    android:text="Select Seat"
                     android:textColor="#FFF" />
             </android.support.v7.widget.CardView>
         </LinearLayout>
