--- a/app/src/main/res/layout/activity_simplify.xml
+++ b/app/src/main/res/layout/activity_simplify.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary_light"
-    tools:context=".ui.payment.PaymentActivity">
+    tools:context=".ui.simplify.SimplifyActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout4"
@@ -25,7 +24,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_payment_title"
+                android:id="@+id/tv_simplify_title"
                 android:layout_width="260dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -35,7 +34,7 @@
                 android:textSize="60dp" />
 
             <ImageView
-                android:id="@+id/iv_payment_icon"
+                android:id="@+id/iv_similify_icon"
                 android:layout_width="142dp"
                 android:layout_height="106dp"
                 android:layout_alignParentEnd="true"
@@ -57,7 +56,7 @@
             tools:layout_editor_absoluteY="139dp">
 
             <com.simplify.android.sdk.CardEditor
-                android:id="@+id/card_editor"
+                android:id="@+id/card_editor_simplify"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.v7.widget.CardView>
@@ -69,7 +68,7 @@
             android:layout_marginTop="15dp">
 
             <Button
-                android:id="@+id/btn_pay"
+                android:id="@+id/btn_simplify"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0288D1"
@@ -80,14 +79,6 @@
         </android.support.v7.widget.CardView>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/iv_omnibus_icon"
-        android:layout_width="130dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="58dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
-        app:srcCompat="@drawable/omnibus_icon" />
+
+
 </android.support.constraint.ConstraintLayout>
