--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -4,12 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.forgotpassword.ForgotPasswordFragment">
+    tools:context=".ui.login.ForgotPasswordFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#B3E5FC"
+        android:background="@color/colorPrimaryDark"
         android:orientation="vertical">
 
 
@@ -20,8 +20,9 @@
             android:layout_weight="1"
             android:gravity="center"
             android:padding="15dp"
-            android:text="Enter Email \n Passwrod will Reset"
-            android:textSize="20dp" />
+            android:text="Enter Email \n Password to Reset"
+            android:textSize="20dp"
+            android:textColor="@color/colorIcons"/>
 
 
         <android.support.v7.widget.CardView
@@ -33,7 +34,7 @@
 
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/et_forgotPW_Mobile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -52,14 +53,14 @@
             android:layout_marginBottom="20dp">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btn_reset"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="#0288D1"
+                android:background="@color/colorAccent"
                 android:padding="15dp"
                 android:text="Reset PassWord"
-                android:textColor="#FFF" />
+                android:textColor="@color/colorPrimary_text" />
 
         </android.support.v7.widget.CardView>
 
