--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -20,7 +20,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:padding="15dp"
-            android:text="Enter Email \n Password to Reset"
+            android:text="Enter Mobile \n Password to Reset"
             android:textSize="20dp"
             android:textColor="@color/colorIcons"/>
 
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="Email"
+                android:hint="Mobile"
                 android:inputType="textPersonName"
                 android:padding="15dp" />
         </android.support.v7.widget.CardView>
