--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -59,7 +59,7 @@
                 android:hint="Mobile"
                 android:inputType="textPersonName"
                 android:padding="10dp"
-                android:text="9876543210" />
+                android:text="" />
         </android.support.v7.widget.CardView>
 
 
@@ -78,7 +78,7 @@
                 android:ems="10"
                 android:hint="Password"
                 android:inputType="textPersonName"
-                android:text="12345678" />
+                android:text="" />
         </android.support.v7.widget.CardView>
 
 
